[tool.poetry]
name = "bsoup"
version = "0.1.0"
description = ""
authors = ["rameryp"]

[tool.poetry.dependencies]
python = "^2.7"
bs4 = "^0.0.1"
urllib3_1_26_2 = "^1.26.2"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]
numpy = "^1.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
